--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-theme: jekyll-theme-Cayman
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACC Poster</title>
+    <style>
+        body{
+            width: 100%;
+            background-color: aliceblue;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+    </style>
 </head>
 <body>
     
-    <p>Hi, this is sumita manohari webpage</p>
+
+    </div>
 </body>
 </html>
