--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +14,8 @@
 </head>
 <body>
     
-
+    <div>
+        Hello, this is Sumita Manohari's blog.
     </div>
 </body>
 </html>
