--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             width: 100%;
             background-color: aliceblue;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            display: flex;
+            align-items: center;
         }
     </style>
 </head>
