--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body{
             width: 100%;
             background-color: aliceblue;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-style: serif;
             display: flex;
             align-items: center;
         }
