--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
             width: 100%;
             background-color: aliceblue;
             font-style: serif;
-            display: flex;
-            align-items: center;
+            display: list-item;
         }
     </style>
 </head>
 <body>
+		<h1>My title</h1>
     
-    <div>
+    <p>
         Hello, this is Sumita Manohari's blog.
-    </div>
+    </p>
+    <p>
+    This is second paragraph.
+    </p>
 </body>
 </html>
